Updated to chrome options.